# resume

./: .gitignore  LICENSE  Resume.cabal  create-resume.nix  default.nix  flake.nix  hie.yaml  me.json  resume.nix
.github/workflows/: build.yml
app/: Main.hs
nix/: tex-env.nix
templates/: cv.tex
