cabal-version:       2.4
name:                Resume
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
license:             BSD-3-Clause
license-file:        LICENSE
author:              Sander Melnikov
maintainer:          Sander Melnikov <hey@sandydoo.me>
copyright:           2022 Sander Melnikov
category:            Utility
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md

common common-options
  build-depends:       aeson
                     , base
                     , bytestring
                     , doclayout
                     , doctemplates
                     , filepath
                     , mtl
                     , optparse-applicative
                     , relude
                     , text
                     , time

  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies

  default-language:    Haskell2010

executable create-resume
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs

  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite create-resume-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs

  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
